trying to fix left align

--- a/style.css
+++ b/style.css
@@ -112,9 +112,9 @@ body, html {
 .hero-text {
   text-align: left;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-110%, -50%);
+  top: 40%;
+  left: 7.5%;
+  /*transform: translate(-110%, -50%); */
   color: white;
 }
 
